alignment fixes

--- a/app/styles/_newsfeed.scss
+++ b/app/styles/_newsfeed.scss
@@ -51,9 +51,9 @@
 		a:not(.acted){
 			color: $text-gray;
 		}
-		a:not(:first-child), .has-tip{
-			margin-left: 20px
-		}
+		// a:not(:first-child), .has-tip{
+		// 	margin-left: 20px
+		// }
 		a+span{
 			margin-left: 5px;
 		}
