--- a/app/styles/components/_tabs.scss
+++ b/app/styles/components/_tabs.scss
@@ -1,5 +1,5 @@
 .tab-controls{
-	display: table;
+	display: flex;
 	width: 100%;
 	.tabs-title{
 		padding: 0;
